<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical">

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="26sp"
            android:textColor="#890056"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/fName"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/fruitN"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/fruit_as"
            android:maxLength="40"
            android:autofillHints="@null"
            android:inputType="none"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/fType"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/fruitT"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/type_as"
            android:maxLength="40"
            android:autofillHints="@null"
            android:inputType="none" />

        <Button
            android:id="@+id/send"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="80dp"
            android:text="@string/send"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textStyle="bold"/>

    </LinearLayout>

</LinearLayout>