<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        tools:ignore="UselessParent"
        >

        <TextView
            android:id="@+id/id"
            android:layout_width="40dp"
            android:layout_height="70dp"
            android:text="@string/number_1"
            android:textStyle="bold"
            android:layout_weight="1"
            android:textSize="30sp"
            />

        <TextView
            android:id="@+id/name"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:text="@string/apple"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/type"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:text="@string/hfs"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/del"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:layout_margin="15dp"
            android:text="@string/delete"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_gravity="center"/>

    </LinearLayout>

</LinearLayout>